# aetherlens

./: .codecov.yml  .env.example  .gitignore  .mdformat.toml  .pre-commit-config.yaml  .ruff.toml  ARCHITECTURE.md  CLAUDE.md  CONTRIBUTING.md  DEVELOPMENT-WORKFLOW.md  DEVELOPMENT.md  DOCUMENTATION_SUMMARY.md  INTERFACES.md  Makefile  QUICKSTART.md  QUICK_REFERENCE.md  README.md  SCHEMA.md  WINDOWS-SETUP.md  alembic.ini  architecture-md.md  claude-md.md  interfaces-md.md  pyproject.toml  readme-md.md  requirements-dev.txt  requirements.txt  schema-md.md
.claude/: settings.local.json
.github/workflows/: ci.yml  release.yml
docker/: Dockerfile  docker-compose.dev.yml  docker-compose.test.yml  docker-compose.yml
docs/: API.md  DEVELOPMENT.md  DOCKER-FIX-SUMMARY.md  DOCKER-QUICKSTART.md  TEST-RUN-SUMMARY.md  TESTING.md
errors/: 20251024 - Github.md  20251024.002.errors.md  20251024.002.fixes.md  20251024.003.errors.md  20251024.004.errors.md  20251024.004.fixes.md  20251024.005.errors.md  20251024.005.fix.md  20251024.006.errors.md  20251025.001.ERRORS.md  20251026.001.md
errors/archive/: 20251024.SUMMARY.md
errors/archive/2025-10-24/: 20251024.003.fixes.md  20251024.006.fix.md
migrations/: env.py
migrations/init/: 00-configure-auth.sh  01-enable-timescaledb.sql
migrations/seeds/: sample_data.sql
migrations/versions/: 001_initial_schema.sql  002_create_hypertables.sql  003_create_indexes.sql  004_continuous_aggregates.sql  005_compression_policies.sql  006_retention_policies.sql
plans/: .plan-organization.txt  1.2-database-setup-plan.md  1.3-core-api-framework-plan.md  README.md  fix-github-actions-plan.md  github-actions-fix-plan.md  github-actions-fixes-applied.md  github-actions-quick-fix.md  initial-development-plan.md  phase-1-foundation-complete.md  phase-1.1-completion-summary.md  phase-1.2-completion-summary.md  phase-1.3-completion-summary.md  test-infrastructure-completion-summary.md  test-infrastructure-plan.md
plans/archived/: fix-github-actions-plan.md  github-actions-fixes-applied.md  github-actions-quick-fix.md  initial-development-plan.md
plans/phase-1/: 1.2-database-setup-plan.md  1.3-core-api-framework-plan.md  PHASE-1-COMPLETE.md  phase-1-foundation-complete.md  phase-1.1-completion-summary.md  phase-1.2-completion-summary.md  phase-1.3-completion-summary.md  test-infrastructure-completion-summary.md  test-infrastructure-plan.md
plans/phase-2/: 2.1-type-system-cleanup-completion.md  2.1-type-system-cleanup-plan.md  PHASE-2-KICKOFF.md
scripts/: alembic-docker.sh  backup_database.sh  format.bat  generate-secret-key.bat  generate-secret-key.py  install-hooks.bat  install-hooks.sh  lint.bat  lint.sh  pre-commit.bat  pre-push.bat  pre-push.sh  restore_database.sh  test-local.bat  test-local.sh  test_db_connection.py
src/aetherlens/: __init__.py  config.py
src/aetherlens/api/: __init__.py  database.py  dependencies.py  logging.py  main.py  metrics.py  rate_limit.py
src/aetherlens/costs/: __init__.py
tests/: __init__.py  conftest.py
tests/api/: __init__.py  test_auth.py  test_devices.py  test_health.py
tests/integration/: __init__.py  test_database.py  test_migrations.py  test_placeholder.py
tests/performance/: __init__.py  test_api_performance.py  test_database_performance.py
tests/quality/: __init__.py
tests/security/: __init__.py  test_security_scans.py
tests/unit/: __init__.py  test_config.py  test_version.py
(+10 files in other folders)
